# investigate_open3d_vs_pcl

./: README.md  README.rst
benchmark/: CMakeLists.txt  iterative_closest_point.cpp  voxel_downsample.cpp
cpp_py/: CMakeLists.txt  test_o3d.py  use_o3d.cpp
gpu_benchmark/: focal__open3d__pcl__cupoch.Singularity
